# proxies-rs

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  justfile  sqlx-data.json
ansible/: hosts.example.yml  playbook.yml
ansible/roles/app/tasks/: delete.yml  host.yml  main.yml  nginx.yml  restart.yml  stop.yml  stop_app.yml  test.yml  update.yml
ansible/roles/app/templates/: app.yml  nginx.yml
migrations/: 20220621072441_init.sql
src/: app.rs  config.rs  db.rs  error.rs  lib.rs  scheduler.rs  server.rs  startup.rs  template.rs  util.rs
src/db/: db.rs  mod.rs  model.rs  util.rs
src/router/: mod.rs  proxy_router.rs  source_router.rs  ui_router.rs
src/service/: mod.rs  proxy_service.rs  source_service.rs
templates/: index.html  proxies.html  sources.html
templates/inc/: layout.html
