[package]
name = "proxies"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-files = "0.6.1"
actix-web = "4.1.0"
anyhow = "1.0.57"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.13.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
once_cell = "1.12.0"
serde = "1.0.137"
serde_json = "1.0.81"
tera = "1.16.0"
mongodb = { version = "2.2.2", features = ["bson-serde_with", "bson-chrono-0_4"] }
serde_with = "1.14.0"
bson = "2.3.0"
futures = "0.3.21"
thiserror = "1.0.31"
reqwest = { version = "0.11.10", features = ["json", "socks"] }
itertools = "0.10.3"
